--- a/Designer/presentation/src/main/AndroidManifest.xml
+++ b/Designer/presentation/src/main/AndroidManifest.xml
@@ -4,14 +4,14 @@
     package="com.wecanstudio.designer">
 
     <application
-        android:name=".presentation.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon, android:theme">
-        <activity android:name=".presentation.view.activity.MainActivity">
+        <activity android:name=".view.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
